--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,12 @@ body {
 
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: "Cursed Timer", sans-serif;
+  background: url(./img/field.jpg);
+  background-size: cover;
 }
 
 h3 {
@@ -70,4 +73,18 @@ h3 {
 
 .adding-button:first-child {
   margin-left: 0;
+}
+
+.reset-button {
+  position: absolute;
+  bottom: 3rem;
+  background-color: transparent;
+  border: 3px solid #9aabd8;
+  color: #9aabd8;
+  text-shadow: 2px 2px 2px #000;
+  font-size: 23px;
+  border-radius: 5px;
+  padding: 10px;
+  font-family: "Cursed Timer", sans-serif;
+  cursor: pointer;
 }
